PP-14727 refactor